--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -13,7 +13,7 @@
     <% @products.each do |product| %>
     <tr>
       <td><%= link_to product.name, product %></td>
-      <td><%= product.price%></td>
+      <td><%= number_to_currency product.price%></td>
       <td><%= image_tag (product.image_url) %></td>
       <td><%= link_to 'Edit', edit_product_path(product)%></td>
       <td><%= button_to 'Destroy', product, method: :delete %></td>
