--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,8 +3,8 @@
 <%= render @product %>
 
 <div>
-  <%= link_to "Edit this product", edit_product_path(@product) %> |
-  <%= link_to "Back to products", products_path %>
+  <%= link_to "Edit", edit_product_path(@product) %> |
+  <%= link_to "Back ", products_path %>
 
-  <%= button_to "Destroy this product", @product, method: :delete %>
+  <%= button_to "Destroy ", @product, method: :delete %>
 </div>
